Prevent the adv search button be visible in the help text, iOS sticky fix (#1018)

--- a/themes/finna2/less/finna/advanced-search.less
+++ b/themes/finna2/less/finna/advanced-search.less
@@ -56,9 +56,10 @@
     padding-top: 10px;
     margin-top: -10px;
     background-color: white;
+    position: -webkit-sticky;
     position: sticky;
     bottom: 0;
-    z-index: 9999;
+    z-index: 1001;
     &.primo-search-bar {
       text-align: right;
       padding-bottom: 10px;
